--- a/control.html
+++ b/control.html
@@ -8,37 +8,67 @@
       font-family: Arial;
       padding: 20px;
     }
+    .player {
+      margin-bottom: 20px;
+    }
     button {
       margin: 5px;
       padding: 10px;
     }
+    input {
+      margin: 5px;
+      padding: 5px;
+    }
   </style>
 </head>
 <body>
-  <h2>Điều khiển điểm</h2>
+  <h2>Điều khiển bảng điểm</h2>
 
   <div>
+    <label>Tên Người chơi 1:</label>
+    <input type="text" id="name1" placeholder="Player 1" />
+  </div>
+  <div>
+    <label>Tên Người chơi 2:</label>
+    <input type="text" id="name2" placeholder="Player 2" />
+  </div>
+  <div>
+    <label>Race (số điểm đích):</label>
+    <input type="number" id="race" placeholder="Ví dụ: 50" />
+  </div>
+
+  <div class="player">
     <h3>Người chơi 1</h3>
     <button onclick="changeScore('player1', 1)">+1</button>
     <button onclick="changeScore('player1', -1)">-1</button>
     <span id="score1">0</span>
   </div>
 
-  <div>
+  <div class="player">
     <h3>Người chơi 2</h3>
     <button onclick="changeScore('player2', 1)">+1</button>
     <button onclick="changeScore('player2', -1)">-1</button>
     <span id="score2">0</span>
   </div>
 
+  <div>
+    <button onclick="saveNamesAndRace()">Lưu tên & Race</button>
+    <button onclick="resetScore()">Reset điểm</button>
+  </div>
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <script src="firebase.js"></script>
+
   <script>
     function updateUI(snapshot) {
       const data = snapshot.val();
       document.getElementById("score1").innerText = data?.player1 || 0;
       document.getElementById("score2").innerText = data?.player2 || 0;
+      document.getElementById("name1").value = data?.player1_name || "";
+      document.getElementById("name2").value = data?.player2_name || "";
+      document.getElementById("race").value = data?.race || "";
     }
 
     window.bidaRef.on("value", updateUI);
@@ -47,7 +77,22 @@
       const ref = window.bidaRef.child(player);
       ref.get().then(snapshot => {
         const current = snapshot.val() || 0;
-        ref.set(current + amount);
+        ref.set(Math.max(current + amount, 0));
+      });
+    }
+
+    function saveNamesAndRace() {
+      window.bidaRef.update({
+        player1_name: document.getElementById("name1").value || "Player 1",
+        player2_name: document.getElementById("name2").value || "Player 2",
+        race: Number(document.getElementById("race").value) || 0
+      });
+    }
+
+    function resetScore() {
+      window.bidaRef.update({
+        player1: 0,
+        player2: 0
       });
     }
   </script>
