--- a/score.html
+++ b/score.html
@@ -1,43 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Bảng điểm</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bảng điểm Bida</title>
   <style>
     body {
+      margin: 0;
       background: transparent;
-      font-family: 'Arial Black', sans-serif;
-      font-size: 48px;
+      font-family: 'Segoe UI', sans-serif;
       color: white;
-      text-align: center;
     }
+
     .scoreboard {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
       display: flex;
-      justify-content: space-around;
-      padding: 20px;
-    }
-    .player {
-      background: rgba(0, 0, 0, 0.6);
+      justify-content: space-between;
+      align-items: flex-end;
       padding: 20px 40px;
-      border-radius: 15px;
-      min-width: 200px;
+      box-sizing: border-box;
+    }
+
+    .player-box {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 20px 30px;
+      border-radius: 20px;
+      min-width: 260px;
+      max-width: 360px;
+    }
+
+    .name {
+      font-size: 28px;
+      font-weight: bold;
+      text-align: right;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 160px;
+      margin-right: 20px;
+    }
+
+    .score {
+      width: 80px;
+      height: 80px;
+      background: #FFD700;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 36px;
+      font-weight: bold;
+      color: black;
+      box-shadow: 0 0 15px #FFD700;
+    }
+
+    .race {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 32px;
+      font-weight: bold;
+      color: #00ffcc;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 12px 30px;
+      border-radius: 30px;
+      box-shadow: 0 0 10px #00ffcc;
     }
   </style>
 </head>
 <body>
+
   <div class="scoreboard">
-    <div class="player" id="p1">0</div>
-    <div class="player" id="p2">0</div>
+    <div class="player-box">
+      <div class="name" id="name1">Player 1</div>
+      <div class="score" id="p1">0</div>
+    </div>
+
+    <div class="player-box">
+      <div class="name" id="name2">Player 2</div>
+      <div class="score" id="p2">0</div>
+    </div>
   </div>
 
+  <div class="race" id="race">Race 15</div>
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <script src="firebase.js"></script>
   <script>
-    window.bidaRef.on("value", snapshot => {
+    function autoResizeFont(element, maxFontSize = 28, minFontSize = 14) {
+      let fontSize = maxFontSize;
+      element.style.fontSize = fontSize + "px";
+      while (element.scrollWidth > element.offsetWidth && fontSize > minFontSize) {
+        fontSize -= 1;
+        element.style.fontSize = fontSize + "px";
+      }
+    }
+
+    bidaRef.on("value", snapshot => {
       const data = snapshot.val();
+      const name1El = document.getElementById("name1");
+      const name2El = document.getElementById("name2");
+
+      name1El.innerText = data?.player1_name || "Player 1";
+      name2El.innerText = data?.player2_name || "Player 2";
       document.getElementById("p1").innerText = data?.player1 || 0;
       document.getElementById("p2").innerText = data?.player2 || 0;
+      document.getElementById("race").innerText = `Race ${data?.race || 15}`;
+
+      autoResizeFont(name1El);
+      autoResizeFont(name2El);
     });
   </script>
 </body>
