--- a/score.html
+++ b/score.html
@@ -20,58 +20,58 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-      padding: 20px 40px;
+      padding: 10px 20px;
       box-sizing: border-box;
     }
 
     .player-box {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
       background: rgba(0, 0, 0, 0.7);
-      padding: 20px 30px;
-      border-radius: 20px;
-      min-width: 260px;
-      max-width: 360px;
+      padding: 10px 15px;
+      border-radius: 10px;
+      min-width: 110px;
+      max-width: 130px;
     }
 
     .name {
-      font-size: 28px;
+      font-size: 14px;
       font-weight: bold;
-      text-align: right;
+      text-align: center;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 160px;
-      margin-right: 20px;
+      max-width: 100px;
     }
 
     .score {
-      width: 80px;
-      height: 80px;
-      background: #FFD700;
+      margin-top: 6px;
+      width: 40px;
+      height: 40px;
+      background: #FFD700; /* Màu vàng bóng 9 */
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 36px;
+      font-size: 18px;
       font-weight: bold;
       color: black;
-      box-shadow: 0 0 15px #FFD700;
+      box-shadow: 0 0 8px #FFD700;
     }
 
     .race {
       position: fixed;
-      bottom: 30px;
+      bottom: 15px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 32px;
+      font-size: 16px;
       font-weight: bold;
       color: #00ffcc;
       background: rgba(0, 0, 0, 0.8);
-      padding: 12px 30px;
-      border-radius: 30px;
-      box-shadow: 0 0 10px #00ffcc;
+      padding: 6px 15px;
+      border-radius: 15px;
+      box-shadow: 0 0 5px #00ffcc;
     }
   </style>
 </head>
@@ -96,7 +96,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <script src="firebase.js"></script>
   <script>
-    function autoResizeFont(element, maxFontSize = 28, minFontSize = 14) {
+    function autoResizeFont(element, maxFontSize = 14, minFontSize = 8) {
       let fontSize = maxFontSize;
       element.style.fontSize = fontSize + "px";
       while (element.scrollWidth > element.offsetWidth && fontSize > minFontSize) {
