--- a/score.html
+++ b/score.html
@@ -26,13 +26,13 @@
 
     .player-box {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
       background: rgba(0, 0, 0, 0.7);
       padding: 10px 15px;
       border-radius: 10px;
       min-width: 110px;
-      max-width: 130px;
+      max-width: 260px;
     }
 
     .name {
@@ -42,7 +42,8 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 100px;
+      max-width: 130px;
+      margin: 0px 10px;
     }
 
     .score {
