--- a/score.html
+++ b/score.html
@@ -20,23 +20,23 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-      padding: 10px 400px;
+      padding: 30px 300px;
       box-sizing: border-box;
     }
 
     .player-box {
       display: flex;
-      flex-direction: row;
+      justify-content: space-around;
       align-items: center;
       background: rgba(0, 0, 0, 0.7);
       padding: 10px 15px;
       border-radius: 10px;
-      min-width: 110px;
-      max-width: 260px;
+      min-width: 260px;
+      max-width: 520px;
     }
 
     .name {
-      font-size: 14px;
+      font-size: 18px;
       font-weight: bold;
       text-align: center;
       white-space: nowrap;
@@ -62,6 +62,7 @@
     }
 
     .race {
+      margin-bottom: 15px;
       position: fixed;
       bottom: 15px;
       left: 50%;
@@ -70,7 +71,7 @@
       font-weight: bold;
       color: #00ffcc;
       background: rgba(0, 0, 0, 0.8);
-      padding: 6px 15px;
+      padding: 24px 35px;
       border-radius: 15px;
       box-shadow: 0 0 5px #00ffcc;
     }
