--- a/score.html
+++ b/score.html
@@ -31,18 +31,18 @@
       background: rgba(0, 0, 0, 0.7);
       padding: 10px 15px;
       border-radius: 10px;
-      min-width: 260px;
-      max-width: 520px;
+      min-width: 360px;
+      max-width: 800px;
     }
 
     .name {
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       text-align: center;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 130px;
+      max-width: 400px;
       margin: 0px 10px;
     }
 
@@ -81,13 +81,13 @@
 
   <div class="scoreboard">
     <div class="player-box">
-      <div class="name" id="name1">Player 1</div>
+      <div class="name" id="name1">TRAN VAN MINH CHIEN</div>
       <div class="score" id="p1">0</div>
     </div>
 
     <div class="player-box">
       <div class="score" id="p2">0</div>
-      <div class="name" id="name2">Player 2</div>
+      <div class="name" id="name2">NGUYEN TRUNG NGUYEN</div>
     </div>
   </div>
 
