--- a/control.html
+++ b/control.html
@@ -1,57 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Điều khiển điểm</title>
   <style>
     body {
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       padding: 20px;
+      margin: 0;
+      background-color: #f2f2f2;
     }
-    .player {
+
+    h2 {
+      text-align: center;
       margin-bottom: 20px;
     }
+
+    .input-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    label {
+      font-weight: bold;
+    }
+
+    input {
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .players {
+      display: flex;
+      justify-content: space-between;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .player {
+      flex: 1 1 300px;
+      background: #ffffff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .player h3 {
+      margin-top: 0;
+    }
+
+    .score {
+      font-size: 2em;
+      margin: 10px 0;
+    }
+
     button {
       margin: 5px;
-      padding: 10px;
+      padding: 10px 15px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
     }
-    input {
-      margin: 5px;
-      padding: 5px;
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .actions {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    @media (max-width: 600px) {
+      .players {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
   <h2>Điều khiển bảng điểm</h2>
 
-  <div>
-    <label>Tên Người chơi 1:</label>
-    <input type="text" id="name1" placeholder="Player 1" />
-  </div>
-  <div>
-    <label>Tên Người chơi 2:</label>
-    <input type="text" id="name2" placeholder="Player 2" />
-  </div>
-  <div>
-    <label>Race (số điểm đích):</label>
-    <input type="number" id="race" placeholder="Ví dụ: 50" />
-  </div>
-
-  <div class="player">
-    <h3>Người chơi 1</h3>
-    <button onclick="changeScore('player1', 1)">+1</button>
-    <button onclick="changeScore('player1', -1)">-1</button>
-    <span id="score1">0</span>
+  <div class="input-group">
+    <div>
+      <label>Tên Người chơi 1:</label>
+      <input type="text" id="name1" placeholder="Player 1" />
+    </div>
+    <div>
+      <label>Tên Người chơi 2:</label>
+      <input type="text" id="name2" placeholder="Player 2" />
+    </div>
+    <div>
+      <label>Race (số điểm đích):</label>
+      <input type="number" id="race" placeholder="Ví dụ: 50" />
+    </div>
   </div>
 
-  <div class="player">
-    <h3>Người chơi 2</h3>
-    <button onclick="changeScore('player2', 1)">+1</button>
-    <button onclick="changeScore('player2', -1)">-1</button>
-    <span id="score2">0</span>
+  <div class="players">
+    <div class="player">
+      <h3>Người chơi 1</h3>
+      <div class="score" id="score1">0</div>
+      <button onclick="changeScore('player1', 1)">+1</button>
+      <button onclick="changeScore('player1', -1)">-1</button>
+    </div>
+
+    <div class="player">
+      <h3>Người chơi 2</h3>
+      <div class="score" id="score2">0</div>
+      <button onclick="changeScore('player2', 1)">+1</button>
+      <button onclick="changeScore('player2', -1)">-1</button>
+    </div>
   </div>
 
-  <div>
+  <div class="actions">
     <button onclick="saveNamesAndRace()">Lưu tên & Race</button>
     <button onclick="resetScore()">Reset điểm</button>
   </div>
